Bug 692532 (part): catch error return, prevent crash.

This fixes the crash by catching an error, but doesn't fix the underlying
problem of not finding the ICC profile file.

No cluster differences.